--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,9 @@ default: &default
 development:
   <<: *default
   database: mealmetrics_api_development
+  username: postgres
+  password: password
+  host: db
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -36,7 +39,7 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: db
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -57,6 +60,9 @@ development:
 test:
   <<: *default
   database: mealmetrics_api_test
+  username: postgres
+  password: password
+  host: db
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
